# projeto-ds

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEPLOY.md  Dockerfile.api  Dockerfile.web  PROMPT_DEPLOY.md  README.md  alembic.ini  api.py  banco_relacional.db  docker-compose.yml  entrypoint.sh  main.py  matchai_local.db  pyproject.toml  render.yaml  requirements-api.txt  requirements-web.txt  requirements.txt  start_matchai.bat  tela_match.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
banco_vetorial/: chroma.sqlite3
scripts/: build_exe.ps1  migrar_sqlite_para_postgres.py  migrate_sqlite_to_postgres.py  run_matchai.py  seed.py
src/: config.py
src/controllers/: api.py  login_controller.py
src/models/: db_models.py
src/schema/: schema_vetores.py
src/services/: api_client.py  auth.py  auth_service.py  chroma_service.py  conversation_starters.py  database.py  db.py  interfaces.py  llm_conversation.py  llm_service.py  local_db.py  match_service.py  postgres_db.py  profile_completion.py  profile_images.py  sqlite_db.py  user_context.py
src/utils/: navigation.py
src/views/: app_layout.py  chat_match_view.py  chat_view.py  conversations_view.py  login_view.py  match_view.py  tela_perfil.py
tests/: conftest.py  test_api.py  test_auth.py  test_database.py  test_flet_controls.py  test_llm_service.py  test_login_view.py  test_match_service.py  test_match_view.py  test_postgres_db.py  test_profile_view.py  test_schema_vetores.py  test_sqlite_db.py  test_vector_schema.py  test_vector_search.py
